borsh/tests/roundtrip/requires_derive_category/snapshots/tests__roundtrip__requires_derive_category__test_generic_structs__generic_associated_type_field.snap
---
source: borsh/tests/roundtrip/requires_derive_category/test_generic_structs.rs
expression: data
---
[
    5,
    0,
    0,
    0,
    118,
    97,
    108,
    117,
    101,
    5,
    0,
    0,
    0,
    102,
    105,
    101,
    108,
    100,
]
