borsh/tests/roundtrip/requires_derive_category/snapshots/tests__roundtrip__requires_derive_category__test_generic_structs__generic_struct_hashmap.snap
---
source: borsh/tests/roundtrip/requires_derive_category/test_generic_structs.rs
expression: data
---
[
    5,
    0,
    0,
    0,
    102,
    105,
    101,
    108,
    100,
    2,
    0,
    0,
    0,
    14,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    118,
    97,
    108,
    117,
    101,
    34,
    0,
    0,
    0,
    7,
    0,
    0,
    0,
    97,
    110,
    111,
    116,
    104,
    101,
    114,
]
